# MyRnnNetwork

./: CMakeLists.txt  main.cpp  rnn.cpp  rnn.h  simplernn.cu
tests/: test.cpp
