cmake_minimum_required(VERSION 3.9)
project(RNN)

set(CMAKE_CXX_STANDARD 11)
find_package(Boost COMPONENTS system filesystem REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
add_library(libRNN rnn.cpp rnn.h)
add_executable(testRNN tests/test.cpp)
add_executable(RNN main.cpp)
target_link_libraries(testRNN ${Boost_LIBRARIES})
enable_testing ()
add_test (testRNN testRNN)
